<resources>
    <string name="app_name">spectrumTask2</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="login">Login</string>
    <string name="create_new">Click here for register</string>
    <string name="not_register">Not Register?</string>
    <string name="phone_number">Phone Number</string>
    <string name="name_error">Please enter your name</string>
    <string name="phone_error">Please enter your phone number</string>
    <string name="email_error">Please enter your email address</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="password_error">Please enter a password</string>
    <string name="error_invalid_password">Please enter a minimum password of 6 characters</string>
    <string name="profile_image">profile image</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_register_click_here_for_login">Already Registered! Click here for login</string>
    <string name="welcome">WELCOME</string>
    <string name="enter_your_task_here">Enter Your Task Here</string>
    <string name="enter_task">Enter Task</string>
    <string name="delete">Delete</string>
    <string name="done">Done</string>
</resources>